# tsukimi-speaker-rust

./: .gitattributes  .gitignore  Cargo.toml  RASPBERRY_PI_SETUP.md  build.rs  build.sh  check_ble_performance.sh  check_service_status.sh  fix_autostart.sh  install_autostart.sh  install_autostart_systemd.sh  optimize_ble_wifi_coexistence.sh  run_debug.sh  setup_all.sh  setup_and_run.sh  setup_dependencies.sh  setup_max98357a.sh
.gemini/: GEMINI.md  settings.json
.github/workflows/: build.yml
src/: audio_system.rs  bluetooth_system.rs  build.rs  connect_system.rs  main.rs
src/audio_system/: audio_main.rs
src/bluetooth_system/: bluetooth_main.rs
src/connect_system/: connect_main.rs
src/proto/: proto.rs
