[package]
name = "tsukimi-speaker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
btleplug = "0.11"
futures = "0.3"

# GStreamer関連
gstreamer = "0.22"
gstreamer-app = "0.22"
glib = "0.19"

# オーディオ出力
cpal = "0.15.3"

# スレッドセーフなバッファ
ringbuf = "0.3.3"

# 簡単なエラーハンドリング
anyhow = "1.0"
bytemuck = "1.23.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tonic = "0.14.1"
tonic-prost = "0.14"
prost = "0.14.1"
tokio-stream = "0.1"
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
tonic-build = "0.14.2"
tonic-prost-build = "0.14" # prostベースのコード生成のために追加

