[package]
name = "tsukimi-speaker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
btleplug = "0.11"
futures = "0.3"

# GStreamer関連
gstreamer = "0.22"
gstreamer-app = "0.22"
glib = "0.19"

# 簡単なエラーハンドリング
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tonic = "0.14.2"
tokio-native-tls = "0.3.1"
native-tls = "0.2.11"
tonic-prost = "0.14"
prost = "0.14.1"
tokio-stream = "0.1"
sysinfo = "0.30"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_os = "linux")'.dependencies]
zbus = { version = "3", default-features = false, features = ["tokio"] }

[build-dependencies]
tonic-build = "0.14.2"
tonic-prost-build = "0.14" # prostベースのコード生成のために追加
